# scielo-dev

./: .gitignore  .gitmodules
AutomataFinito/: AutomataFinito.mds  AutomataFinito.userprefs
AutomataFinito/AutomataFinito/: AssemblyInfo.cs  AutomataFinito.mdp  AutomataFinito.pidb  Main.cs
AutomataFinito/AutomataLibrary/: AssemblyInfo.cs  AutomataLibrary.mdp  AutomataLibrary.pidb  Context.cs  DFA.cs  DFAReader.cs  FAReader.cs  GReader.cs  IFA.cs  MyClass.cs  NFA.cs  NFAReader.cs  RegGram.cs  TestContext.cs  TestDFA.cs
AutomataFinito/AutomataLibrary/Data/: dfa-001.xml  dfa-002.xml  dfa-cero-star-uno-cero-plus.xml  dfa.dtd  gram-001.xml  gram-002.xml  grammar.dtd  ndfa-ab-star-union-a.xml  ndfa-foo.xml  ndfa.dtd
PDF2Scielo/: AUTHORS  ChangeLog  INSTALL  LICENSE  Main.build  Makefile.am  PDF2Scielo.mds  Packages.mdse  autogen.sh  configure.ac
PDF2Scielo/Markup/: DocumentHTML.cs  HTMLDocument.cs  Makefile.am  Markup.build  Markup.mdp  MarkupHTML.cs  MarkupHTML.mdp  markup.pc.in
PDF2Scielo/Markup/Data/: npdaAtm.xml
PDF2Scielo/Markup/Test/: TestMarkupHTML.cs
PDF2Scielo/MarkupHTML/: AssemblyInfo.cs  Configuration.cs  GStarSXQ.cs  Markup.build  MarkupHTML.build  MarkupHTML.cs  MarkupHTML.mdp  MyClass.cs  NPDA.cs  ParserHTML.cs  XReaderNPDA.cs
PDF2Scielo/MarkupHTML/Test/: TestConfiguration.cs  TestMarkupHTML.cs
PDF2Scielo/PDF2Scielo/: AppOptions.cs  AssemblyInfo.cs  ChangeLog  Driver.cs  Main.cs  Makefile.am  PDF2Scielo.build  PDF2Scielo.mdp  pdf2scielo.in
PDF2Scielo/PDF2Scielo.Gui/: AboutDialog.cs  AssemblyInfo.cs  ChangeLog  Main.cs  Makefile.am  MarkerWindow.cs  OpenPDFDialog.cs  PDF2Scielo.Gui.build  PDF2Scielo.Gui.mdp  Preview.cs  PreviewDialog.cs  StyleSelect.cs  StyleSelectDialog.cs  pdf2scielo-gui.in
PDF2Scielo/PDF2Scielo.Gui/gtk-gui/: PDF2Scielo.Gui.StyleSelect.cs  Scielo.PDF2Scielo.AboutDialog.cs  Scielo.PDF2Scielo.MarkerWindow.cs  Scielo.PDF2Scielo.OpenPDFDialog.cs  Scielo.PDF2Scielo.PreviewDialog.cs  Scielo.PDF2Scielo.StyleSelect.cs  Scielo.PDF2Scielo.StyleSelectDialog.cs  gui.stetic
PDF2Scielo/PDF2Text/: AssemblyInfo.cs  AtmNormalizer.cs  BlockType.cs  ChangeLog  CodesTable.cs  DocReader.cs  Document.cs  Exceptions.cs  IExtractable.cs  INormalizable.cs  Makefile.am  Modifier.cs  MyClass.cs  NormDocument.cs  Normalizer.cs  PDF2Text.build  PDF2Text.mdp  PDFPoppler.cs  PDFSharp.cs  PDFTextColumn.cs  RawDocument.cs  Rule.cs  RuleType.cs  StringMatch.cs  StringMatchCollection.cs  StyleReader.cs  Test.config  pdf2text.pc.in
PDF2Scielo/PDF2Text/Data/: style.dtd  style.nrg  style.rnc  style.xsd
PDF2Scielo/PDF2Text/Test/: TestAtmNormalizer.cs  TestBack.txt  TestBody.txt  TestDocReader.cs  TestFront.txt  TestModifier.cs  TestNormDocument.cs  TestNormalizer.cs  TestPDFPoppler.cs  TestPDFSharp.cs  TestPDFTextColumn.cs  TestRawDocument.cs  TestRule.cs  TestStringMatch.cs  TestStringMatchCollection.cs  TestStyleReader.cs  TextRawDocument.cs  normalizer-rules.xml  normalizer-step1.txt  normalizer.txt  test-invalid.xml  test-schema.xml  test-valid.xml  test.xml  unit-test.sources  v17n01a02-norm.txt  v17n01a02-raw.txt  v17n01a02.htm  v17n2a02-norm.txt  v17n2a02-raw.txt  v17n2a02.htm  v17n4a03-norm.txt  v17n4a03-raw.txt  v17n4a03.htm  v18n4a02-norm.txt  v18n4a02-raw.txt  v18n4a02.htm
PDF2Scielo/PDF2Text/Test/atm/: atm.sources  v17n2a02-norm.txt
PDF2Scielo/PDF2Text/Test/eng-agr/: eng-agr.sources  eng-agr1-norm.txt  eng-agr1-raw.txt  eng-agr1.htm
PDF2Scielo/PDFImage/: Makefile.am  MyClass.cs  PDFImage.build  PDFImage.mdp  PDFImage.pidb  pdfimage.pc.in
PDF2Scielo/Styles/: atm.xml
PDF2Scielo/Testing/: Main.cs  Testing.mdp
PDF2Scielo/Utils/: ChangeLog  CodesTable.cs  Logger.cs  Makefile.am  MyClass.cs  StringEncoding.cs  StringRegexp.cs  Test.cs  Utils.build  Utils.mdp  Utils.pidb  utils.pc.in
PDF2Scielo/Utils/Test/: TestCodesTable.cs  TestStringEncoding.cs  TestStringRegexp.cs
PDF2Scielo/style/: arcame.xml  atm.xml  eng-agr.xml
Presentaciones/: presentacion v3.2.ppt
ScieloIndex/: .gitignore  AUTHORS  INSTALL  Rakefile
ScieloIndex/app/controllers/: ChangeLog  alternate_titles_controller.rb  application.rb  article_authors_controller.rb  article_keywords_controller.rb  article_subjects_controller.rb  articles_controller.rb  associated_files_controller.rb  author_institutions_controller.rb  authors_controller.rb  citation_index_controller.rb  citations_controller.rb  cite_index_controller.rb  cites_controller.rb  collections_controller.rb  countries_controller.rb  institutions_controller.rb  journal_issues_controller.rb  journals_controller.rb  keywords_controller.rb  languages_controller.rb  publishers_controller.rb  scielo_admin_controller.rb  scielo_index_controller.rb  sessions_controller.rb  subjects_controller.rb  users_controller.rb
ScieloIndex/app/helpers/: ChangeLog  alternate_titles_helper.rb  application_helper.rb  article_authors_helper.rb  (+10 more)
ScieloIndex/config/: database.yml  environment.rb  mongrel_cluster.yml  routes.rb
ScieloIndex/db/: ChangeLog  index-dev.sql  index.sql  schema.sql
ScieloIndex/lang/: default.rb  es_MX.rb
ScieloIndex/lib/: ezgraphix_redef.rb  pdf_writer_extensions.rb  query_helper.rb  scielo_index_report.rb
ScieloIndex/public/: indexScieloMexico.html
ScieloIndex/test/: ChangeLog  test_helper.rb
ScieloIndex/tools/: Country.rb  DataExtractor.rb  clase26abrExtract.txt  simple.rb
(+328 files in other folders)
